<resources>
    <string name="app_name">Gazetka.pl</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="pdf">pdf</string>
    <string name="bg_all">Bg_all</string>
    <string name="right_but_bg">Right_but_bg</string>
    <string name="left_but_bg">Left_but_bg</string>
    <string name="AU_txt">AU_txt</string>
    <string name="SHP_txt">Sklepy</string>
    <string name="A_txt">O nas</string>
    <string name="Serch_bg">Serch_bg</string>
    <string name="girl_img">girl_img</string>
    <string name="img_bg">img_bg</string>
    <string name="map_bt">map_bt</string>
    <string name="back_bt">back_bt</string>
    <string name="back_button">Powrót</string>
    <string name="lidl_img">lidl_img</string>

    <string name="title_activity_about_us">about_us</string>

</resources>
