<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".about_us"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/left_bg2"
        android:layout_width="173dp"
        android:layout_height="61dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/left_but_bg"
        android:onClick="back"
        app:layout_constraintBottom_toTopOf="@+id/imageView6"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:srcCompat="@mipmap/backg_cat_left" />

    <TextView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/back_button"
        android:text="@string/back_button"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/left_bg2"
        app:layout_constraintEnd_toEndOf="@+id/left_bg2"
        app:layout_constraintStart_toStartOf="@+id/left_bg2"
        app:layout_constraintTop_toTopOf="@+id/left_bg2" />

    <ImageView
        android:id="@+id/right_bg2"
        android:layout_width="175dp"
        android:layout_height="59dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/right_but_bg"
        app:layout_constraintBottom_toTopOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:srcCompat="@mipmap/backg_cat_right" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="402dp"
        android:layout_height="558dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/bg_all"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/backg_all" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/A_txt"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/right_bg2"
        app:layout_constraintEnd_toEndOf="@+id/right_bg2"
        app:layout_constraintStart_toStartOf="@+id/right_bg2"
        app:layout_constraintTop_toTopOf="@+id/right_bg2" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="356dp"
        android:layout_height="527dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="@+id/imageView6"
        app:layout_constraintVertical_bias="0.652"
        app:srcCompat="@mipmap/autorzy" />

</android.support.constraint.ConstraintLayout>